# todo_list

./: .env  .gitignore  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 2024_10_31_1337-e3596170a508_initial_migration.py  2024_11_01_2246-c3957805aea7_initial_migration.py  2024_11_01_2251-c3ae3db39343_initial_migration.py  2024_11_06_1107-cc3f8896b05c_create_initial_tables.py  2024_11_06_1120-85b76471f260_fix_relationships.py  2024_11_06_1607-7df9ce2415fe_initial_migration.py  2024_11_06_2154-0d85d2910a05_add_role_id_column_in_user.py  2024_11_06_2232-4d837519f8f2_add_roles.py
src/: config.py  database.py  main.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/models/: models.py
src/tasks/: models.py  router.py  schemas.py
